Added repeat functionality, and changed Collections.singletonList to List.of. (#17)